gen/healthcare/v1alpha2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-healthcare1_alpha2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/healthcare/v1alpha2/lib)
error[E0433]: failed to resolve: unresolved import
     --> gen/healthcare/v1alpha2/lib/src/lib.rs:18750:45
      |
18750 |                         view: Option<crate::messages::params::GetView>,
      |                                             ^^^^^^^^
      |                                             |
      |                                             unresolved import
      |                                             help: a similar path exists: `crate::projects::locations::datasets::hl_7v2_stores::messages`

error[E0433]: failed to resolve: unresolved import
     --> gen/healthcare/v1alpha2/lib/src/lib.rs:18767:43
      |
18767 |                             value: crate::messages::params::GetView,
      |                                           ^^^^^^^^
      |                                           |
      |                                           unresolved import
      |                                           help: a similar path exists: `crate::projects::locations::datasets::hl_7v2_stores::messages`

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:3042:13
     |
3042 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `datasets::DatasetsActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:3095:17
     |
3095 |                 datasets::DatasetsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `datasets::DatasetsActions { /* fields */ }`?

error[E0423]: expected value, found struct `annotation_stores::AnnotationStoresActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:3669:21
     |
3669 |                     annotation_stores::AnnotationStoresActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `annotation_stores::AnnotationStoresActions { /* fields */ }`?

error[E0423]: expected value, found struct `dicom_stores::DicomStoresActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:3673:21
     |
3673 |                     dicom_stores::DicomStoresActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `dicom_stores::DicomStoresActions { /* fields */ }`?

error[E0423]: expected value, found struct `fhir_stores::FhirStoresActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:3677:21
     |
3677 |                     fhir_stores::FhirStoresActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `fhir_stores::FhirStoresActions { /* fields */ }`?

error[E0423]: expected value, found struct `hl_7v2_stores::Hl7V2StoresActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:3681:21
     |
3681 |                     hl_7v2_stores::Hl7V2StoresActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `hl_7v2_stores::Hl7V2StoresActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:3685:21
     |
3685 |                     operations::OperationsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `annotations::AnnotationsActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:5166:25
     |
5166 |                         annotations::AnnotationsActions
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `annotations::AnnotationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `dicom_web::DicomWebActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:7478:25
     |
7478 |                         dicom_web::DicomWebActions
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `dicom_web::DicomWebActions { /* fields */ }`?

error[E0423]: expected value, found struct `studies::StudiesActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:9041:29
     |
9041 |                             studies::StudiesActions
     |                             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `studies::StudiesActions { /* fields */ }`?

error[E0423]: expected value, found struct `series::SeriesActions`
    --> gen/healthcare/v1alpha2/lib/src/lib.rs:9734:33
     |
9734 |                                 series::SeriesActions
     |                                 ^^^^^^^^^^^^^^^^^^^^^ did you mean `series::SeriesActions { /* fields */ }`?

error[E0423]: expected value, found struct `instances::InstancesActions`
     --> gen/healthcare/v1alpha2/lib/src/lib.rs:10681:37
      |
10681 |                                     instances::InstancesActions
      |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instances::InstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `frames::FramesActions`
     --> gen/healthcare/v1alpha2/lib/src/lib.rs:11421:41
      |
11421 |                                         frames::FramesActions
      |                                         ^^^^^^^^^^^^^^^^^^^^^ did you mean `frames::FramesActions { /* fields */ }`?

error[E0423]: expected value, found struct `fhir::FhirActions`
     --> gen/healthcare/v1alpha2/lib/src/lib.rs:12796:25
      |
12796 |                         fhir::FhirActions
      |                         ^^^^^^^^^^^^^^^^^ did you mean `fhir::FhirActions { /* fields */ }`?

error[E0423]: expected value, found struct `messages::MessagesActions`
     --> gen/healthcare/v1alpha2/lib/src/lib.rs:17113:25
      |
17113 |                         messages::MessagesActions
      |                         ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `messages::MessagesActions { /* fields */ }`?

warning: unreachable expression
     --> gen/healthcare/v1alpha2/lib/src/lib.rs:18329:33
      |
18329 | /                                 Ok(match value {
18330 | |                                     _ => {
18331 | |                                         return Err(::serde::de::Error::custom(format!(
18332 | |                                             "invalid enum for #name: {}",
...     |
18335 | |                                     }
18336 | |                                 })
      | |__________________________________^
      |
      = note: #[warn(unreachable_code)] on by default

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-healthcare1_alpha2`.

To learn more, run the command again with --verbose.
